# lattice

src/: a.php  all.php  challengesMatrix.php  db.php  details.php  getNorm.php  halloffame.php  index.php  solution.php  submission.php
src/includes/: submission.inc.php  submission.inc.php_old  verify  verify-old
src/style/: colour.css  style-760.css  style-800.css  style.css  style2.css
src/textfiles/: contestants-backup.txt  contestants.txt  contestants.txtXXX  contestants2.txt  examplesubmission.txt  format.txt
src/verify/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  verify_random.cpp
src/verify/ntl/src/: MakeDesc  TestGetTime  gen_gmp_aux  gen_lip_gmp_aux
